--- a/app/src/main/res/layout/food_view.xml
+++ b/app/src/main/res/layout/food_view.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="63pt"
     android:layout_height="wrap_content"
     android:background="@color/grey"
-    android:padding="5pt"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5pt">
 
     <LinearLayout
-        android:background="@drawable/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/background"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivFood"
             android:layout_width="50pt"
             android:layout_height="50pt"
             app:srcCompat="@drawable/coffee_pot" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
